--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 #configuration
 server.port=8081
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://databse-1.co8zwck6nkxr.ap-south-1.rds.amazonaws.com:3306/batch14
-spring.datasource.username=naveen
-spring.datasource.password=naveennaveen
+spring.datasource.url=jdbc:mysql://database-2.czo1rqkkgqfs.ap-south-1.rds.amazonaws.com:3306/Batch14
+spring.datasource.username=anusha
+spring.datasource.password=hemareddy99
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.maxLifetime= 600000
 
